# QR-Code-generator

./: main.py  pyproject.toml
